@@ -7,7 +7,7 @@ from setuptools import find_packages
 
 if __name__ == "__main__":
     setup(name="db",
-          version="0.0.13",
+          version="0.0.14",
           description="Databases for Humans",
           author="John Evans",
           author_email="lgastako@gmail.com",
